# substitute-bot

./: .gitignore  Jenkinsfile  Makefile  Pipfile  README.md  __init__.py  bot.py  config.env  pyproject.toml  requirements.txt
bot/: __init__.py  groups.py  inlinequery.py  models.py  notification.py  substitutegroup.py  updater.py  utils.py
bot/controllers/: __init__.py  groups.py  notification.py  substitutegroup.py
bot/tests/: test_private.py
